Fix slideshow overlay not staying in position on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -166,11 +166,11 @@ body {
 /*     #HOMEPAGE       */
 /*********************/
 
-.hero {
+.image-slider {
   position: relative;
 }
 
-.hero__img {
+.image-slider__img {
   min-width: 100%;
   height: auto;
   position: absolute;
@@ -181,7 +181,11 @@ body {
   animation-duration: 3s;
 }
 
-.hero::before {
+.no-slide {
+  position: static;  
+}
+
+.image-slider::before {
   content: '';
   background: linear-gradient(to top,
       hsla(0, 0%, 100%, 0.29) 0%,
@@ -207,21 +211,22 @@ body {
   height: 100%;
 }
 
-.main__overlay {
+.image-slider__overlay {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  justify-content: flex-end;
+  margin-bottom: var(--size4);
+  z-index: 1000;
   position: absolute;
-  /* top: 200%; */
-  left: 50%;
-
-  transform: translate(-50%, 550%);
+  bottom: 0;
+  left: 0;
 }
 
 .main__logo {
   margin-bottom: var(--size1);
-  /* opacity: 0.9; */
 }
 
 .main__tagline {
@@ -242,11 +247,9 @@ body {
 @keyframes slide {
   from {
     transform: translateX(100%);
-    /* opacity: 0; */
   }
 
   to {
     transform: translateX(0);
-    /* opacity: 1; */
   }
 }
